Se integra sdk de Paypal en el proyecto

--- a/views/shared/header.ejs
+++ b/views/shared/header.ejs
@@ -12,6 +12,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src=https://cdn.jsdelivr.net/npm/pretty-print-json@0.2/dist/pretty-print-json.min.js></script>
   <!--PayPal JS SDK HERE -->
+  <script src="https://www.paypal.com/sdk/js?client-id=AeU7qN4VkCc0hRinPWQFUyYOvhGr95fHjTwVrS69ZTH-QfYQI9IPB99vfsAgSpf71h7ay1F_MnOT9aL7"></script>
 </head>
 
 <body>
