--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,32 +1,67 @@
 <%- include('shared/header', {title: title}); %>
-		<div class="hero-body">
-			<div class="container has-text-centered">
-				<div class="columns is-8 is-variable ">
-					<div class="column is-two-thirds has-text-left">
-            <div class="card">
-              <div class="card-image">
-                <figure class="image is-4by3" style='background-image:url("/images/<%= product.image %>"); background-size: cover;'>
-                </figure>
-              </div>
-              <div class="card-content">
-                <div class="media">
-                  <div class="media-content">
-                    <p class="title is-4"><%= product.name %></p>
-                    <p class="subtitle is-6">$<%= product.price.toFixed(2) %></p>
-                  </div>
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <div class="columns is-8 is-variable ">
+        <div class="column is-two-thirds has-text-left">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3"
+                style='background-image:url("/images/<%= product.image %>"); background-size: cover;'>
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="media">
+                <div class="media-content">
+                  <p class="title is-4">
+                    <%= product.name %>
+                  </p>
+                  <p class="subtitle is-6">$<%= product.price.toFixed(2) %>
+                  </p>
                 </div>
               </div>
             </div>
-					</div>
-					<div class="column is-one-third has-text-left">
-						<div class="field">
-							<label class="label">Pago:</label>
-						<div class="control">
+          </div>
+        </div>
+        <div class="column is-one-third has-text-left">
+          <div class="field">
+            <label class="label">Pago:</label>
+            <div class="control">
               <!-- PP Smart Button Container HERE! -->
-						</div>
-					</div>
-				</div>
-			</div>
+              <div id="paypal-botón-container"></div>
+              <form id="paypal-form" action="/success" method="POST">
+                <input type="hidden" name="details" id="details-input">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-<%- include('shared/footer'); %>
+  <script>
+    paypal.Buttons({
+      createOrder: (data, actions) => {
+        return actions.order.create({
+          purchase_units: [{
+            amount: {
+              value: '<%= product.price %>' // Can also reference a variable or function
+            }
+          }]
+        });
+      },
+      onApprove: function (data, actions) {
+        return actions.order.capture().then(function (details) {
+          // Show a success message to the buyer
+          // alert('Transaction completed by ' + orderData.payer.name.given_name + '!');
+          var paypalform = document.getElementById('paypal-form');
+          var detailsInput = document.getElementById('details-input');
+
+          var jsonDetails = JSON.stringify(details);
+
+          detailsInput.value = jsonDetails;
+          paypalform.submit();
+        });
+        //alert('Transacción creada!');
+      }
+    }).render('#paypal-botón-container');
+  </script>
+  <%- include('shared/footer'); %>
